--- a/app/index.html
+++ b/app/index.html
@@ -2,45 +2,41 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset='utf-8'>
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Hub de Comentários</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
 
-    </style>
-    <link rel='stylesheet' href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-
-        </nav>
-
-    </header>
-    <h1>
-        Bem vindo Hub de Comentarios
-    </h1>
-    <div class="comentarios">
-        <form onsubmit="submitComment(event)">
-            <label for="">Autor </label>
-            <input type="text" name="autor" id="inputAuthor">
-            <label for="campodetexto">Comentarios </label>
+<!-- ADD NEW COMMENT -->
+    <div class="comments" id="form-comentario">
+        <h3>Novo Comentário</h3>
+        <form id="formComment">
+            <label for="autor">Autor</label>
+            <input type="text" name="autor" id="inputAuthor" required>
+            <label for="comentario">Digite seu comentário</label>
             <textarea name="comentario" id="inputComment" cols="30" rows="10" required></textarea>
-            <button type="submit" class="bnt-submit" value="Enviar">
+            <button type="submit" class="btn-submit">Enviar</button>
+        </form>
+    </div>
+<!-- DISPLAY COMMENTS -->
+    <div class="comments my-3 p-3 bg-body rounded shadow-sm">
+        <h6 class="border-bottom pb-2 mb-0">Feed</h6>
+<div id="comment-feed">
+
+</div>
+        <small class="d-block text-end mt-3">
+            <a href="#">All updates</a>
+        </small>
     </div>
 
-    <main>
-        <aside></aside>
-        <section></section>
-    </main>
 
-    </form>
-
-    <footer></footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script type="module" src="./script.js"></script>
 </body>
 
