--- a/FRONT-END/index.html
+++ b/FRONT-END/index.html
@@ -11,28 +11,35 @@
 </head>
 
 <body>
-<!-- ADD NEW COMMENT -->
-    <div class="comments" id="form-comentario">
-        <h3>Novo Comentário</h3>
-        <form id="formComment">
-            <label for="autor">Autor</label>
-            <input type="text" name="autor" id="inputAuthor" required>
-            <label for="comentario">Digite seu comentário</label>
-            <textarea name="comentario" id="inputComment" cols="30" rows="10" required></textarea>
-            <button type="submit" class="btn-submit">Enviar</button>
-        </form>
-    </div>
-<!-- DISPLAY COMMENTS -->
-    <div class="comments my-3 p-3 bg-body rounded shadow-sm">
-        <h6 class="border-bottom pb-2 mb-0">Feed</h6>
-<div id="comment-feed">
+    <!-- ADD NEW COMMENT -->
+    <div class="container text-center">
+        <div class="row">
+            <div class="col shadow-lg">
+                <div class="comments" id="form-comentario">
+                    <h3>Novo Comentário</h3>
+                    <form id="formComment">
+                        <label for="autor">Autor</label>
+                        <input type="text" name="autor" id="inputAuthor" required>
+                        <label for="comentario">Digite seu comentário</label>
+                        <textarea name="comentario" id="inputComment" cols="30" rows="10" required></textarea>
+                        <button type="submit" class="btn-submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col">
+                <!-- DISPLAY COMMENTS -->
+                <div class="comments my-3 p-3 bg-body rounded shadow-sm">
+                    <h3 class="border-bottom pb-2 mb-0">Feed</h3>
+                    <div id="comment-feed">
 
-</div>
-        <small class="d-block text-end mt-3">
-            <a href="#">All updates</a>
-        </small>
+                    </div>
+                    <small class="d-block text-end mt-3">
+                        <a href="#">All updates</a>
+                    </small>
+                </div>
+            </div>
+        </div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
