--- a/FRONT-END/index.html
+++ b/FRONT-END/index.html
@@ -15,14 +15,24 @@
     <div class="container text-center">
         <div class="row">
             <div class="col shadow-lg">
-                <div class="comments" id="form-comentario">
+                <div class="comment-feed card shadow" id= "login-form">
+<h2>Login</h2>
+<form id="formLogin">
+    <input type="text" name="username" id="username"
+placeholder="Seu login aqui..." required>
+<input type="password" name="password"
+placeholder="sua senha..." required>
+    <button type="submit" class="btn btn-dark my-2">Enviar</button>
+</form>
+                </div>
+                <div class="comments disabled" id="form-comentario">
                     <h3>Novo Comentário</h3>
                     <form id="formComment">
                         <label for="autor">Autor</label>
                         <input type="text" name="autor" id="inputAuthor" required>
                         <label for="comentario">Digite seu comentário</label>
                         <textarea name="comentario" id="inputComment" cols="30" rows="10" required></textarea>
-                        <button type="submit" class="btn-submit">Enviar</button>
+                        <button type="submit" class="btn btn-dark my-2">Enviar</button>
                     </form>
                 </div>
             </div>
