Integração de user e comments

--- a/FRONT-END/index.html
+++ b/FRONT-END/index.html
@@ -15,15 +15,13 @@
     <div class="container text-center">
         <div class="row">
             <div class="col shadow-lg">
-                <div class="comment-feed card shadow" id= "login-form">
-<h2>Login</h2>
-<form id="formLogin">
-    <input type="text" name="username" id="username"
-placeholder="Seu login aqui..." required>
-<input type="password" name="password"
-placeholder="sua senha..." required>
-    <button type="submit" class="btn btn-dark my-2">Enviar</button>
-</form>
+                <div class="comment-feed card shadow" id="login-form">
+                    <h2>Login</h2>
+                    <form id="formLogin">
+                        <input type="text" name="username" id="username" placeholder="Seu login aqui..." required>
+                        <input id="password" type="password" name="password" placeholder="sua senha..." required>
+                        <button type="submit" class="btn btn-dark my-2">Enviar</button>
+                    </form>
                 </div>
                 <div class="comments disabled" id="form-comentario">
                     <h3>Novo Comentário</h3>
